--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "build": "tsc"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.0.1"
   },
   "devDependencies": {
@@ -23,6 +26,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^18.14.6",
     "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
