--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,11 +25,12 @@ jobs:
 
     - name: Build, tag, and push image to Amazon ECR
       env:
-        ECR_REPOSITORY: docker_nodejs_demo
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: patashamba
         IMAGE_TAG: latest
       run: |
-        docker build -t patashamba .
-        docker push patashamba:latest
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
   # terraform:
   #   name:  Terraform
   #   runs-on: ubuntu-latest
