--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,8 +29,8 @@ jobs:
         ECR_REPOSITORY: patashamba
         IMAGE_TAG: latest
       run: |
-        docker build -t public.ecr.aws/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push public.ecr.aws/$ECR_REPOSITORY:$IMAGE_TAG
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
   # terraform:
   #   name:  Terraform
   #   runs-on: ubuntu-latest
