--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,8 +28,8 @@ jobs:
         ECR_REGISTRY: 173130437624.dkr.ecr.eu-west-3.amazonaws.com/patashamba
         IMAGE_NAME: patashamba
       run: |
-        docker build -t $ECR_REGISTRY/$IMAGE_NAME:$GITHUB_SHA .
-        docker push $ECR_REGISTRY/$IMAGE_NAME:$GITHUB_SHA
+        docker build -t public.ecr.aws/g5p0u0h0/patashamba:latest .
+        docker push public.ecr.aws/g5p0u0h0/patashamba:latest
   # terraform:
   #   name:  Terraform
   #   runs-on: ubuntu-latest
